<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myappaccomo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.myappaccomo.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.myappaccomo.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.myappaccomo.ui.send.SendFragment"
        android:label="Help"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myappaccomo.ui.logout.logout"
        android:label="Log Out"
        tools:layout="@layout/fragment_logout" />

</navigation>